WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234685
[GTK][a11y] Test accessibility/aria-inherits-presentational.html is failing with ATSPI
https://bugs.webkit.org/show_bug.cgi?id=234685
Summary
[GTK][a11y] Test accessibility/aria-inherits-presentational.html is failing w...
Carlos Garcia Campos
Reported
2021-12-26 02:03:29 PST
We are ignoring list items inheriting presentational role, but we need to expose its contents.
Attachments
Patch
(2.70 KB, patch)
2021-12-26 02:58 PST
,
Carlos Garcia Campos
aperez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2021-12-26 02:58:44 PST
Created
attachment 447971
[details]
Patch
Carlos Garcia Campos
Comment 2
2021-12-26 23:38:52 PST
Committed
r287457
(
245592@trunk
): <
https://commits.webkit.org/245592@trunk
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug