[GTK][a11y] Test accessibility/aria-inherits-presentational.html is failing with ATSPI https://bugs.webkit.org/show_bug.cgi?id=234685

Reviewed by Adrian Perez de Castro.

We are ignoring list items inheriting presentational role, but we need to expose its contents.

* accessibility/atspi/AccessibilityObjectAtspi.cpp:
(WebCore::AccessibilityObjectAtspi::effectiveRole const): Use section as effective role of list items inheriting
presentational role.
(WebCore::AccessibilityObject::accessibilityPlatformIncludesObject const): Include list items inheriting
presentational role.


Canonical link: https://commits.webkit.org/245592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287457 268f45cc-cd09-0410-ab3c-d52691b4dbfc